--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 altair==5.1.2
 attrs==23.1.0
 blinker==1.7.0
@@ -36,6 +37,7 @@ requests==2.31.0
 rich==13.6.0
 rpds-py==0.12.0
 scipy==1.11.3
+setuptools==69.5.1
 six==1.16.0
 smmap==5.0.1
 streamlit==1.28.1
@@ -49,4 +51,5 @@ tzlocal==5.2
 urllib3==2.0.7
 validators==0.22.0
 watchdog==3.0.0
+wheel==0.43.0
 zipp==3.17.0
